# RayTracer-CGHomeWork

./: AABB.h  BVH.h  CMakeLists.txt  Camera.h  Collide.h  CollisibleList.h  DiffuseLight.h  Glass.h  Lambertian.h  Material.h  Metal.h  MovingSphere.h  README.md  Random.h  Ray.h  Sphere.h  Texture.h  Vector.h  main.cpp  stb_image.h  vector.h
